libnma: add nma_wifi_dialog_new_for_secrets use example
[lkundrak@v3.sk: split this into a separate executable]

--- a/src/libnma/tests/meson.build
+++ b/src/libnma/tests/meson.build
@@ -39,3 +39,12 @@ executable(
   c_args: cflags,
   install: false
 )
+
+executable(
+  'wifi-dialog-secrets',
+  'wifi-dialog-secrets.c',
+  include_directories: incs,
+  dependencies: deps,
+  c_args: cflags,
+  install: false
+)
