nma/tests: add certificate chooser test program

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ src/libnma/NMA-1.0.typelib
 src/libnma/nma-resources.c
 src/libnma/nma-resources.h
 src/libnma/nma-version.h
+src/libnma/tests/cert-chooser
 src/libnma/tests/mobile-wizard
 src/libnma/tests/run-vpn
 src/libnma/tests/vpn-password-dialog
