--- a/src/libnma/meson.build
+++ b/src/libnma/meson.build
@@ -71,11 +71,6 @@ cflags = [
 
 symbol_map = join_paths(meson.current_source_dir(), 'libnma.ver')
 
-ldflags = []
-if have_version_script
-  ldflags += '-Wl,--version-script,' + symbol_map
-endif
-
 if enable_gcr
   headers += files(
     'nma-cert-chooser-button.h',
@@ -100,7 +95,7 @@ libnma = shared_library(
   include_directories: incs,
   dependencies: deps,
   c_args: cflags,
-  link_args: ldflags,
+  link_args: '-Wl,--version-script,' + symbol_map,
   link_depends: symbol_map,
   link_whole: libwireless_security_libnm,
   install: true,
