--- a/nm-connection-editor.desktop.in
+++ b/nm-connection-editor.desktop.in
@@ -9,4 +9,4 @@ Type=Application
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=NetworkManager
 X-GNOME-Bugzilla-Component=nm-connection-editor
-Categories=GNOME;GTK;Settings;X-GNOME-NetworkSettings;
+Categories=GNOME;GTK;Settings;X-GNOME-NetworkSettings;X-GNOME-Utilities;
