--- a/nm-connection-editor.desktop.in
+++ b/nm-connection-editor.desktop.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
-_Name=Advanced Network Configuration
-_Comment=Manage and change your network connection settings
+Name=Advanced Network Configuration
+Comment=Manage and change your network connection settings
 Icon=preferences-system-network
 Exec=nm-connection-editor
 Terminal=false
