--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ aclocal.m4
 depcomp
 install-sh
 INSTALL
+ABOUT-NLS
 libtool
 ltmain.sh
 missing
@@ -25,13 +26,56 @@ stamp-*
 .libs
 autom4te.cache
 intltool-*
+
+po/boldquot.sed
+po/en@boldquot.header
+po/en@quot.header
 po/*.gmo
-po/*.pot
+po/insert-header.sin
 po/.intltool-merge-cache
+po/Makevars.template
+po/*.pot
+po/quot.sed
+po/remove-potcdate.sed
+po/remove-potcdate.sin
+po/Rules-quot
+
+m4/codeset.m4
+m4/fcntl-o.m4
+m4/gettext.m4
+m4/glibc21.m4
+m4/glibc2.m4
 m4/gtk-doc.m4
+m4/iconv.m4
+m4/intdiv0.m4
+m4/intldir.m4
+m4/intl.m4
+m4/intlmacosx.m4
 m4/intltool.m4
+m4/intmax.m4
+m4/inttypes_h.m4
+m4/inttypes-pri.m4
+m4/lcmessage.m4
+m4/lib-ld.m4
+m4/lib-link.m4
+m4/lib-prefix.m4
 m4/libtool.m4
+m4/lock.m4
+m4/longlong.m4
 m4/lt*.m4
+m4/nls.m4
+m4/po.m4
+m4/printf-posix.m4
+m4/progtest.m4
+m4/size_max.m4
+m4/stdint_h.m4
+m4/threadlib.m4
+m4/uintmax_t.m4
+m4/visibility.m4
+m4/wchar_t.m4
+m4/wint_t.m4
+m4/xsize.m4
+
 test-*.log
 
 /cscope.in.out
