--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -80,6 +80,8 @@ src/connection-editor/vpn-helpers.c
 src/ethernet-dialog.c
 src/gsm-unlock.ui
 src/info.ui
+src/libnma/nma-bar-code-widget.c
+src/libnma/nma-bar-code-widget.ui
 src/libnma/nma-file-cert-chooser.c
 src/libnma/nma-mobile-providers.c
 src/libnma/nma-mobile-wizard.c
