appdata: add OARS rating
There's no content that would be ranked objectionable by OARS unless you're
the sort of person that likes to put nudity, religious violence and
adultery into your connections. That's none of our business though.

The new version of appdata-util insists on this tag being around.

--- a/nm-connection-editor.appdata.xml.in
+++ b/nm-connection-editor.appdata.xml.in
@@ -25,4 +25,6 @@
   <update_contact>networkmanager-maint@gnome.bugs</update_contact>
   <translation type="gettext">nm-applet</translation>
   <developer_name>The NetworkManager Developers</developer_name>
+
+  <content_rating type="oars-1.0" />
 </component>
