--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@
       file
       findutils
       gcc
+      libtool
       desktop-file-utils
       gettext-devel
       glib2-devel
@@ -30,6 +31,7 @@
       file
       findutils
       gcc
+      libtool
       desktop-file-utils
       gettext-devel
       glib2-devel
@@ -40,11 +42,7 @@
       NetworkManager-libnm-devel
       pkgconfig
       /usr/bin/autopoint
-      gcr-devel
-      gobject-introspection-devel redhat-rpm-config
-      gtk-doc
-      iso-codes-devel
-      mobile-broadband-provider-info-devel
+      redhat-rpm-config
       jansson-devel
       ModemManager-glib-devel
       libselinux-devel
@@ -68,12 +66,7 @@
       -Dwwan=false
       -Dselinux=false
       -Dteam=false
-      -Dgcr=false
-      -Diso_codes=false
-      -Dmobile_broadband_provider_info=false
       -Dld_gc=false
-      -Dgtk_doc=false
-      -Dintrospection=false
       -Dappindicator=no
       -Dmore_asserts=no
       network-manager-applet-*/ build
@@ -92,12 +85,7 @@
       -Dwwan=true
       -Dselinux=true
       -Dteam=true
-      -Dgcr=true
-      -Diso_codes=true
-      -Dmobile_broadband_provider_info=true
       -Dld_gc=true
-      -Dgtk_doc=true
-      -Dintrospection=true
       -Dappindicator=no
       -Dmore_asserts=yes
       network-manager-applet-*/ build
@@ -117,17 +105,12 @@
       --disable-silent-rules
       --with-more-asserts=no
       --disable-nls
-      --disable-iso-codes
-      --disable-mobile-broadband-provider-info
-      --disable-gtk-doc
-      --disable-introspection
       --disable-schemas-compile
       --disable-more-warnings
       --without-appindicator
       --without-wwan
       --without-selinux
       --without-team
-      --without-gcr
     - make -j$(nproc)
     - make -j$(nproc) check
     - make -j$(nproc) install
@@ -144,16 +127,11 @@
       --disable-silent-rules
       --with-more-asserts=yes
       --enable-nls
-      --enable-iso-codes
-      --enable-mobile-broadband-provider-info
-      --enable-gtk-doc
-      --enable-introspection
       --enable-schemas-compile
       --enable-more-warnings
       --with-wwan
       --with-selinux
       --with-team
-      --with-gcr
     - make -j$(nproc)
     - make -j$(nproc) check
     - make -j$(nproc) install
@@ -199,6 +177,7 @@ fedora_autotools_full:
 #      file
 #      findutils
 #      gcc
+#      libtool
 #      desktop-file-utils
 #      gettext-devel
 #      glib2-devel
@@ -210,11 +189,7 @@ fedora_autotools_full:
 #      NetworkManager-libnm-devel
 #      pkgconfig
 #      /usr/bin/autopoint
-#      gcr-devel
-#      gobject-introspection-devel redhat-rpm-config
-#      gtk-doc
-#      iso-codes-devel
-#      mobile-broadband-provider-info-devel
+#      redhat-rpm-config
 #      jansson-devel
 #      ModemManager-glib-devel
 #      libselinux-devel
@@ -226,42 +201,14 @@ fedora_autotools_full:
 #      --disable-silent-rules
 #      --with-more-asserts=yes
 #      --enable-nls
-#      --enable-iso-codes
-#      --enable-mobile-broadband-provider-info
-#      --enable-gtk-doc
-#      --enable-introspection
 #      --enable-schemas-compile
 #      --enable-more-warnings
 #      --with-wwan
 #      --with-selinux
 #      --with-team
-#      --with-gcr
 #    - make -j$(nproc)
 #    - make -j$(nproc) check
 #    - make -j$(nproc) install
 #    - make -j$(nproc) uninstall
 #  image: centos:7
 #  stage: test
-
-# https://network-manager-applet.pages.gitlab.gnome.org/libnma/
-pages:
-  <<: *fedora_full
-  <<: *dist
-  image: fedora:latest
-  stage: deploy
-  script:
-    - dnf -y install make
-    - tar xJf network-manager-applet-*.tar.xz
-    - cd network-manager-applet-*/
-    - ./configure
-      --disable-silent-rules
-      --enable-gtk-doc
-    - make -j$(nproc)
-    - cd ..
-    - mkdir -p public
-    - mv network-manager-applet-*/html public/libnma
-  artifacts:
-    paths:
-      - public
-  only:
-    - master
