--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,9 @@
       NetworkManager-libnm-devel
       pkgconfig
       /usr/bin/autopoint
+      fedora-repos-rawhide
+    - dnf -y install --nogpgcheck --enablerepo=rawhide
+      libnma-devel
 
 .fedora_full: &fedora_full
   before_script:
@@ -45,10 +48,13 @@
       jansson-devel
       ModemManager-glib-devel
       libselinux-devel
+      fedora-repos-rawhide
+    - dnf -y install --nogpgcheck --enablerepo=rawhide
+      libnma-devel
 
 .dist: &dist
   dependencies:
-    - fedora28_dist
+    - fedora30_dist
   variables:
     GIT_STRATEGY: none
 
@@ -153,9 +159,9 @@
     - make -j$(nproc) install
     - make -j$(nproc) uninstall
 
-fedora28_dist:
+fedora30_dist:
   <<: *fedora_full
-  image: fedora:28
+  image: fedora:30
   stage: build
   script:
     - dnf -y install
@@ -186,56 +192,56 @@ fedora_autotools_full:
   image: fedora:latest
   stage: test
 
-centos7:
-  <<: *dist
-  before_script:
-    - yum -y install
-      file
-      findutils
-      gcc
-      desktop-file-utils
-      gettext-devel
-      glib2-devel
-      gtk3-devel
-      intltool
-      libgudev1-devel
-      libnotify-devel
-      libsecret-devel
-      NetworkManager-libnm-devel
-      pkgconfig
-      /usr/bin/autopoint
-      gcr-devel
-      gobject-introspection-devel redhat-rpm-config
-      gtk-doc
-      iso-codes-devel
-      mobile-broadband-provider-info-devel
-      jansson-devel
-      ModemManager-glib-devel
-      libselinux-devel
-      make
-  script:
-    - tar xJf network-manager-applet-*.tar.xz
-    - cd network-manager-applet-*/
-    - ./configure
-      --disable-silent-rules
-      --with-more-asserts=yes
-      --enable-nls
-      --enable-iso-codes
-      --enable-mobile-broadband-provider-info
-      --enable-gtk-doc
-      --enable-introspection
-      --enable-schemas-compile
-      --enable-more-warnings
-      --with-wwan
-      --with-selinux
-      --with-team
-      --with-gcr
-    - make -j$(nproc)
-    - make -j$(nproc) check
-    - make -j$(nproc) install
-    - make -j$(nproc) uninstall
-  image: centos:7
-  stage: test
+#centos7:
+#  <<: *dist
+#  before_script:
+#    - yum -y install
+#      file
+#      findutils
+#      gcc
+#      desktop-file-utils
+#      gettext-devel
+#      glib2-devel
+#      gtk3-devel
+#      intltool
+#      libgudev1-devel
+#      libnotify-devel
+#      libsecret-devel
+#      NetworkManager-libnm-devel
+#      pkgconfig
+#      /usr/bin/autopoint
+#      gcr-devel
+#      gobject-introspection-devel redhat-rpm-config
+#      gtk-doc
+#      iso-codes-devel
+#      mobile-broadband-provider-info-devel
+#      jansson-devel
+#      ModemManager-glib-devel
+#      libselinux-devel
+#      make
+#  script:
+#    - tar xJf network-manager-applet-*.tar.xz
+#    - cd network-manager-applet-*/
+#    - ./configure
+#      --disable-silent-rules
+#      --with-more-asserts=yes
+#      --enable-nls
+#      --enable-iso-codes
+#      --enable-mobile-broadband-provider-info
+#      --enable-gtk-doc
+#      --enable-introspection
+#      --enable-schemas-compile
+#      --enable-more-warnings
+#      --with-wwan
+#      --with-selinux
+#      --with-team
+#      --with-gcr
+#    - make -j$(nproc)
+#    - make -j$(nproc) check
+#    - make -j$(nproc) install
+#    - make -j$(nproc) uninstall
+#  image: centos:7
+#  stage: test
 
 # https://network-manager-applet.pages.gitlab.gnome.org/libnma/
 pages:
