--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,7 @@
       libsecret-devel
       NetworkManager-libnm-devel
       libnma-devel
+      libmm-glib
       pkgconfig
       /usr/bin/autopoint
 
@@ -39,6 +40,7 @@
       libsecret-devel
       NetworkManager-libnm-devel
       libnma-devel
+      libmm-glib
       pkgconfig
       /usr/bin/autopoint
       redhat-rpm-config
