icons: Add scalable SVG icons
Also default initial load size to 22px icons, since there are no 16px
for most possible statuses.

--- a/Makefile.am
+++ b/Makefile.am
@@ -149,8 +149,80 @@ EXTRA_DIST += $(icon48_DATA)
 
 iconscalabledir=$(datadir)/icons/hicolor/scalable/apps
 iconscalable_DATA = \
+	icons/scalable/nm-adhoc.svg \
 	icons/scalable/nm-device-wired.svg \
-	icons/scalable/nm-no-connection.svg
+	icons/scalable/nm-device-wired-secure.svg \
+	icons/scalable/nm-device-wwan.svg \
+	icons/scalable/nm-mb-roam.svg \
+	icons/scalable/nm-no-connection.svg \
+	icons/scalable/nm-secure-lock.svg \
+	icons/scalable/nm-signal-00.svg \
+	icons/scalable/nm-signal-00-secure.svg \
+	icons/scalable/nm-signal-100.svg \
+	icons/scalable/nm-signal-100-secure.svg \
+	icons/scalable/nm-signal-25.svg \
+	icons/scalable/nm-signal-25-secure.svg \
+	icons/scalable/nm-signal-50.svg \
+	icons/scalable/nm-signal-50-secure.svg \
+	icons/scalable/nm-signal-75.svg \
+	icons/scalable/nm-signal-75-secure.svg \
+	icons/scalable/nm-stage01-connecting01.svg \
+	icons/scalable/nm-stage01-connecting02.svg \
+	icons/scalable/nm-stage01-connecting03.svg \
+	icons/scalable/nm-stage01-connecting04.svg \
+	icons/scalable/nm-stage01-connecting05.svg \
+	icons/scalable/nm-stage01-connecting06.svg \
+	icons/scalable/nm-stage01-connecting07.svg \
+	icons/scalable/nm-stage01-connecting08.svg \
+	icons/scalable/nm-stage01-connecting09.svg \
+	icons/scalable/nm-stage01-connecting10.svg \
+	icons/scalable/nm-stage01-connecting11.svg \
+	icons/scalable/nm-stage02-connecting01.svg \
+	icons/scalable/nm-stage02-connecting02.svg \
+	icons/scalable/nm-stage02-connecting03.svg \
+	icons/scalable/nm-stage02-connecting04.svg \
+	icons/scalable/nm-stage02-connecting05.svg \
+	icons/scalable/nm-stage02-connecting06.svg \
+	icons/scalable/nm-stage02-connecting07.svg \
+	icons/scalable/nm-stage02-connecting08.svg \
+	icons/scalable/nm-stage02-connecting09.svg \
+	icons/scalable/nm-stage02-connecting10.svg \
+	icons/scalable/nm-stage02-connecting11.svg \
+	icons/scalable/nm-stage03-connecting01.svg \
+	icons/scalable/nm-stage03-connecting02.svg \
+	icons/scalable/nm-stage03-connecting03.svg \
+	icons/scalable/nm-stage03-connecting04.svg \
+	icons/scalable/nm-stage03-connecting05.svg \
+	icons/scalable/nm-stage03-connecting06.svg \
+	icons/scalable/nm-stage03-connecting07.svg \
+	icons/scalable/nm-stage03-connecting08.svg \
+	icons/scalable/nm-stage03-connecting09.svg \
+	icons/scalable/nm-stage03-connecting10.svg \
+	icons/scalable/nm-stage03-connecting11.svg \
+	icons/scalable/nm-tech-3g.svg \
+	icons/scalable/nm-tech-cdma-1x.svg \
+	icons/scalable/nm-tech-edge.svg \
+	icons/scalable/nm-tech-evdo.svg \
+	icons/scalable/nm-tech-gprs.svg \
+	icons/scalable/nm-tech-hspa.svg \
+	icons/scalable/nm-tech-lte.svg \
+	icons/scalable/nm-tech-umts.svg \
+	icons/scalable/nm-vpn-active-lock.svg \
+	icons/scalable/nm-vpn-connecting01.svg \
+	icons/scalable/nm-vpn-connecting02.svg \
+	icons/scalable/nm-vpn-connecting03.svg \
+	icons/scalable/nm-vpn-connecting04.svg \
+	icons/scalable/nm-vpn-connecting05.svg \
+	icons/scalable/nm-vpn-connecting06.svg \
+	icons/scalable/nm-vpn-connecting07.svg \
+	icons/scalable/nm-vpn-connecting08.svg \
+	icons/scalable/nm-vpn-connecting09.svg \
+	icons/scalable/nm-vpn-connecting10.svg \
+	icons/scalable/nm-vpn-connecting11.svg \
+	icons/scalable/nm-vpn-connecting12.svg \
+	icons/scalable/nm-vpn-connecting13.svg \
+	icons/scalable/nm-vpn-connecting14.svg \
+	icons/scalable/nm-wwan-tower.svg
 EXTRA_DIST += $(iconscalable_DATA)
 
 EXTRA_DIST += icons/meson.build
