--- a/icons/meson.build
+++ b/icons/meson.build
@@ -89,8 +89,80 @@ icons_32 = [
 icons_48 = ['nm-device-wireless.png']
 
 icons_scalable = [
+  'nm-adhoc.svg',
   'nm-device-wired.svg',
-  'nm-no-connection.svg'
+  'nm-device-wired-secure.svg',
+  'nm-device-wwan.svg',
+  'nm-mb-roam.svg',
+  'nm-no-connection.svg',
+  'nm-secure-lock.svg',
+  'nm-signal-00.svg',
+  'nm-signal-00-secure.svg',
+  'nm-signal-100.svg',
+  'nm-signal-100-secure.svg',
+  'nm-signal-25.svg',
+  'nm-signal-25-secure.svg',
+  'nm-signal-50.svg',
+  'nm-signal-50-secure.svg',
+  'nm-signal-75.svg',
+  'nm-signal-75-secure.svg',
+  'nm-stage01-connecting01.svg',
+  'nm-stage01-connecting02.svg',
+  'nm-stage01-connecting03.svg',
+  'nm-stage01-connecting04.svg',
+  'nm-stage01-connecting05.svg',
+  'nm-stage01-connecting06.svg',
+  'nm-stage01-connecting07.svg',
+  'nm-stage01-connecting08.svg',
+  'nm-stage01-connecting09.svg',
+  'nm-stage01-connecting10.svg',
+  'nm-stage01-connecting11.svg',
+  'nm-stage02-connecting01.svg',
+  'nm-stage02-connecting02.svg',
+  'nm-stage02-connecting03.svg',
+  'nm-stage02-connecting04.svg',
+  'nm-stage02-connecting05.svg',
+  'nm-stage02-connecting06.svg',
+  'nm-stage02-connecting07.svg',
+  'nm-stage02-connecting08.svg',
+  'nm-stage02-connecting09.svg',
+  'nm-stage02-connecting10.svg',
+  'nm-stage02-connecting11.svg',
+  'nm-stage03-connecting01.svg',
+  'nm-stage03-connecting02.svg',
+  'nm-stage03-connecting03.svg',
+  'nm-stage03-connecting04.svg',
+  'nm-stage03-connecting05.svg',
+  'nm-stage03-connecting06.svg',
+  'nm-stage03-connecting07.svg',
+  'nm-stage03-connecting08.svg',
+  'nm-stage03-connecting09.svg',
+  'nm-stage03-connecting10.svg',
+  'nm-stage03-connecting11.svg',
+  'nm-tech-3g.svg',
+  'nm-tech-cdma-1x.svg',
+  'nm-tech-edge.svg',
+  'nm-tech-evdo.svg',
+  'nm-tech-gprs.svg',
+  'nm-tech-hspa.svg',
+  'nm-tech-lte.svg',
+  'nm-tech-umts.svg',
+  'nm-vpn-active-lock.svg',
+  'nm-vpn-connecting01.svg',
+  'nm-vpn-connecting02.svg',
+  'nm-vpn-connecting03.svg',
+  'nm-vpn-connecting04.svg',
+  'nm-vpn-connecting05.svg',
+  'nm-vpn-connecting06.svg',
+  'nm-vpn-connecting07.svg',
+  'nm-vpn-connecting08.svg',
+  'nm-vpn-connecting09.svg',
+  'nm-vpn-connecting10.svg',
+  'nm-vpn-connecting11.svg',
+  'nm-vpn-connecting12.svg',
+  'nm-vpn-connecting13.svg',
+  'nm-vpn-connecting14.svg',
+  'nm-wwan-tower.svg'
 ]
 
 icons = [
