--- a/shared/meson.build
+++ b/shared/meson.build
@@ -1,11 +1,5 @@
 shared_inc = include_directories('.')
 
-shared_base_sources = files(
+shared_sources = files(
   'nm-utils/nm-shared-utils.c',
 )
-
-shared_sources = shared_base_sources + files(
-  'nm-utils/nm-compat.c',
-)
-
-shared_legacy_sources = shared_base_sources
