--- a/.gitignore
+++ b/.gitignore
@@ -87,8 +87,6 @@ test-*.log
 nm-applet.conf
 nm-applet.desktop
 nm-connection-editor.desktop
-org.gnome.nm-applet.gschema.xml
-org.gnome.nm-applet.gschema.valid
 org.gnome.nm-connection-editor.appdata.xml
 src/connection-editor/nm-connection-editor
 src/connection-editor/nm-connection-editor-service-glue.h
@@ -150,3 +148,11 @@ libnma.interfaces
 libnma.prerequisites
 libnma.signals
 libnma.types
+
+
+# The following names are no longer present on this branch,
+# but they were on older versions. Thus keep ignoring them
+# otherwise when switching branches these untracked files show
+# up.
+/org.gnome.nm-applet.gschema.xml
+/org.gnome.nm-applet.gschema.valid
