build: use NMA_VERSION_MIN_REQUIRED/NMA_VERSION_MAX_ALLOWED macros

--- a/configure.ac
+++ b/configure.ac
@@ -73,6 +73,8 @@ LIBNM_CFLAGS="$LIBNM_CFLAGS -DGLIB_VERSION_MIN_REQUIRED=GLIB_VERSION_2_38"
 LIBNM_CFLAGS="$LIBNM_CFLAGS -DGLIB_VERSION_MAX_ALLOWED=GLIB_VERSION_2_38"
 LIBNM_CFLAGS="$LIBNM_CFLAGS -DNM_VERSION_MIN_REQUIRED=NM_VERSION_1_16"
 LIBNM_CFLAGS="$LIBNM_CFLAGS -DNM_VERSION_MAX_ALLOWED=NM_VERSION_1_16"
+LIBNM_CFLAGS="$LIBNM_CFLAGS -DNMA_VERSION_MIN_REQUIRED=NMA_VERSION_1_8_28"
+LIBNM_CFLAGS="$LIBNM_CFLAGS -DNMA_VERSION_MAX_ALLOWED=NMA_VERSION_1_8_28"
 
 PKG_CHECK_MODULES(LIBNMA, libnma)
 
