--- a/meson.build
+++ b/meson.build
@@ -143,7 +143,9 @@ cflags = [
   '-DGLIB_VERSION_MIN_REQUIRED=GLIB_VERSION_2_38',
   '-DGLIB_VERSION_MAX_ALLOWED=GLIB_VERSION_2_38',
   '-DNM_VERSION_MIN_REQUIRED=NM_VERSION_1_16',
-  '-DNM_VERSION_MAX_ALLOWED=NM_VERSION_1_16'
+  '-DNM_VERSION_MAX_ALLOWED=NM_VERSION_1_16',
+  '-DNMA_VERSION_MIN_REQUIRED=NM_VERSION_1_8_28',
+  '-DNMA_VERSION_MAX_ALLOWED=NM_VERSION_1_8_28',
 ]
 
 libnm_dep = declare_dependency(
