build: require libnma 1.8.28
Applet requires libnma-1.8.28 because "org.gnome.nm-applet.gschema.xml"
move to libnma.

Now libnma 1.8.28 got released. Explicitly encode the dependency.
Note that it is still inconvenient at this point to bootstrap
and build applet as such.

Still bump the dependency because it's right to do before release
and we will applet 1.16.0 shortly. While inconvenient, it's definitely
doable to have libnma-1.8.28 present for building applet.

--- a/configure.ac
+++ b/configure.ac
@@ -59,15 +59,15 @@ GETTEXT_PACKAGE=nm-applet
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package])
 
-PKG_CHECK_MODULES(LIBNM, [libnm >= 1.7 gio-2.0 >= 2.38 gmodule-export-2.0])
+PKG_CHECK_MODULES(LIBNM, [libnm >= 1.15 gio-2.0 >= 2.38 gmodule-export-2.0])
 LIBNM_CFLAGS="$LIBNM_CFLAGS -DGLIB_VERSION_MIN_REQUIRED=GLIB_VERSION_2_38"
 LIBNM_CFLAGS="$LIBNM_CFLAGS -DGLIB_VERSION_MAX_ALLOWED=GLIB_VERSION_2_38"
 LIBNM_CFLAGS="$LIBNM_CFLAGS -DNM_VERSION_MIN_REQUIRED=NM_VERSION_1_16"
 LIBNM_CFLAGS="$LIBNM_CFLAGS -DNM_VERSION_MAX_ALLOWED=NM_VERSION_1_16"
-LIBNM_CFLAGS="$LIBNM_CFLAGS -DNMA_VERSION_MIN_REQUIRED=NMA_VERSION_1_8_22"
-LIBNM_CFLAGS="$LIBNM_CFLAGS -DNMA_VERSION_MAX_ALLOWED=NMA_VERSION_1_8_22"
 
-PKG_CHECK_MODULES(LIBNMA, libnma)
+PKG_CHECK_MODULES(LIBNMA, libnma >= 1.8.27)
+LIBNMA_CFLAGS="$LIBNMA_CFLAGS -DNMA_VERSION_MIN_REQUIRED=NMA_VERSION_1_8_28"
+LIBNMA_CFLAGS="$LIBNMA_CFLAGS -DNMA_VERSION_MAX_ALLOWED=NMA_VERSION_1_8_28"
 
 PKG_CHECK_MODULES(LIBSECRET, [libsecret-1 >= 0.18])
 
