--- a/configure.ac
+++ b/configure.ac
@@ -4,7 +4,7 @@ m4_define([nm_applet_major_version], [1])
 m4_define([nm_applet_minor_version], [15])
 m4_define([nm_applet_micro_version], [0])
 m4_define([nm_applet_version],
-          [nm_applet_major_version.nma_minor_version.nma_micro_version])
+          [nm_applet_major_version.nm_applet_minor_version.nm_applet_micro_version])
 
 AC_INIT([nm-applet],
         [nm_applet_version],
